resources/dsaas/dsaas-production/rhche-prometheus.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: rhche-prometheus
  annotations:
    openshift.io/host.generated: "true"
  name: rhche-prometheus
spec:
  host: rhche-prometheus-dsaas-production.09b5.dsaas.openshiftapps.com
  port:
    targetPort: http
  to:
    kind: Service
    name: rhche-prometheus
    weight: 100
  wildcardPolicy: None
